# feasible_muscle_force_analysis

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  README.org
data/gait1018/: gait1018.osim  subject01_ik_task_set.xml  subject01_scaled.osim  subject01_setup_fmfa.xml  subject01_setup_ik.xml  subject01_setup_jra.xml  subject01_setup_scale.xml  subject01_setup_so.xml  subject01_walk1_grf.xml
data/gait1018/results/: subject01_JointReaction_ReactionLoads.sto  subject01_StaticOptimization_activation.sto  subject01_StaticOptimization_controls.xml  subject01_StaticOptimization_force.sto  subject01_inverse_dynamics.sto  subject01_walk1_ik.mot
release/: README.md
release/v4.0/: buildinfo.txt
release/v4.0/MAC_x64/: libFeasibleMuscleForceAnalysis_rd.dylib
scripts/: analyze_joint_reaction_forces.py  opensim_utils.py  perform_joint_reaction_batch.py  utils.py
source_code_opensim_v4.0/: .dir-locals.el  CMakeLists.txt
source_code_opensim_v4.0/src/: CMakeLists.txt  CalculateFeasibleJointReactionLoads.cpp  CalculateFeasibleMuscleForces.cpp  Settings.h  testAnalysis.cpp
source_code_opensim_v4.0/src/dirent/: dirent.c  dirent.h
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/: CMakeLists.txt  FeasibleMuscleForceAnalysis.cpp  FeasibleMuscleForceAnalysis.h
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/gmp_win32/: gmp.exp  gmpDebug.exp  gmpDebug.ilk
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/internal/: FeasibleMuscleForceAnalysisExports.h  RegisterPlugin.cpp  RegisterPlugin.h
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/lrslib/: CMakeLists.txt  lrsgmp.h  lrslib.c  lrslib.h  lrslong.h
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/lrslib/gmp_win64/include/: gmp.h
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/lrslib/lib_mpir_cxx/: config.h  gmp.h  longlong.h  mpirxx.lib
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/lrslib/unused/: lrslib.c
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/lrslib/unused/gmp_win64/: gmp.h
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/lrslib/unused/gmp_win64/lib/: libgmp.la
source_code_opensim_v4.0/src/feasible_muscle_force_analysis/unistd_win32/: unistd.h
src/: CalculateFeasibleJointReactionLoads.cpp
src/feasible_muscle_force_analysis/: CMakeLists.txt  FeasibleMuscleForceAnalysis.cpp
src/feasible_muscle_force_analysis/lrslib/: lrsgmp.h
